--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h1>Playstaion 1</h1>
                 <p>O PlayStation 1, lançado em 1994, revolucionou a indústria dos videogames e marcou o início da
                     dominação da Sony nesse mercado.</p>
+                <button>SAIBA MAIS</button>
             </div>
             <div class="img"><img src="./assets/PsOne.png" alt="" class="img-console"></div>
         </section>
