--- a/ps2/index.html
+++ b/ps2/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prosto+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../assets/playstation.svg">
     <title>PS2</title>
 </head>
 
@@ -60,12 +61,22 @@
 
             <h1 class="title">Jogos</h1>
             <div id="scroll">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
+                <img src="../assets/ps2/fifastreet2.jpg" alt="" class="games">
+                <img src="../assets/ps2/MKSM.jpg" alt="" class="games">
+                <img src="../assets/ps2/nfsu2.jpg" alt="" class="games">
+                <img src="../assets/ps2/GTASA.jpg" alt="" class="games">
+                <img src="../assets/ps2/SpiderMan2.jpg" alt="" class="games">
+                <img src="../assets/ps2/RE4.jpg" alt="" class="games">
+                <img src="../assets/ps2/granturismo4.jpg" alt="" class="games">
+                <img src="../assets/ps2/GOW.jpg" alt="" class="games">
+                <img src="../assets/ps2/diverPL.jpg" alt="" class="games">
+                <img src="../assets/ps2/black.jpg" alt="" class="games">
+                <img src="../assets/ps2/bully.jpg" alt="" class="games">
+                <img src="../assets/ps2/midnightclub.jpg" alt="" class="games">
+                <img src="../assets/ps2/GH3.jpg" alt="" class="games">
+                <img src="../assets/ps2/DBZbudokai.jpg" alt="" class="games">
+                <img src="../assets/ps2/shadowofthecolossus.jpg" alt="" class="games">
+                <img src="../assets/ps2/jak3.jpg" alt="" class="games">
             </div>
         </section>
 
