--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
 
-        <section>
+        <section class="container">
             <div class="list">
 
                 <div class="item active ">
@@ -74,8 +74,8 @@
             </div>
 
             <div class="arrows">
-                <button class="left"><img src="./assets/seta.png" alt="" class="seta esquerda"></button>
-                <button class="right"><img src="./assets/seta.png" alt="" class="seta direita"></button>
+                <button id="prev"><img src="./assets/seta.png" alt="seta-esquerda"></button>
+                <button id="next"><img src="./assets/seta.png" alt="seta-direita"></button>
             </div>
 
             <div class="indicator">
