--- a/ps3/index.html
+++ b/ps3/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prosto+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../assets/playstation.svg">
     <title>PS3</title>
 </head>
 
@@ -56,12 +57,20 @@
 
             <h1 class="title">Jogos</h1>
             <div id="scroll">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-            </div>
+                <img src="../assets/ps3/uncharted2.jpg" alt="" class="games">
+                <img src="../assets/ps3/GOW3.jpg" alt="" class="games">
+                <img src="../assets/ps3/TLOS.jpg" alt="" class="games">
+                <img src="../assets/ps3/GT5.jpg" alt="" class="games">
+                <img src="../assets/ps3/beyondtwosouls.jpg" alt="" class="games">
+                <img src="../assets/ps3/infamous2.jpg" alt="" class="games">
+                <img src="../assets/ps3/AC2.jpg" alt="" class="games">
+                <img src="../assets/ps3/bf3.jpg" alt="" class="games">
+                <img src="../assets/ps3/codmw.jpg" alt="" class="games">
+                <img src="../assets/ps3/Farcry3.jpg" alt="" class="games">
+                <img src="../assets/ps3/RDR.jpg" alt="" class="games">
+                <img src="../assets/ps3/batmanarkhamcity.jpg" alt="" class="games">
+                <img src="../assets/ps3/MK9.jpg" alt="" class="games">
+                <img src="../assets/ps3/fifa13.jpg" alt="" class="games">
         </section>
 
         <section id="container-conteudo">
