--- a/ps5/index.html
+++ b/ps5/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prosto+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../assets/playstation.svg">
     <title>PS5</title>
 </head>
 
@@ -58,11 +59,12 @@
 
             <h1 class="title">Jogos</h1>
             <div id="scroll">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
-                <img src="" alt="" class="games">
+                <img src="../assets/ps5/codmw2.jpg" alt="" class="games">
+                <img src="../assets/ps5/cyberpunk.jpg" alt="" class="games">
+                <img src="../assets/ps5/MK1.jpg" alt="" class="games">
+                <img src="../assets/ps5/REvillage.jpg" alt="" class="games">
+                <img src="../assets/ps5/fc24.jpg" alt="" class="games">
+                <img src="../assets/ps5/REvil4.jpg" alt="" class="games">
             </div>
         </section>
 
