--- a/psONE/index.html
+++ b/psONE/index.html
@@ -59,12 +59,19 @@
 
             <h1 class="title">Jogos</h1>
             <div id="scroll">
-                <img src="../assets/THPS.png" alt="" class="games">
-                <img src="../assets/THPS2.png" alt="" class="games">
-                <img src="../assets/REvil3.jpg" alt="" class="games">
-                <img src="../assets/SyphonFilter3.png" alt="" class="games">
-                <img src="../assets/silenthill.jpg" alt="" class="games">
-                <img src="../assets/MKtrilogy.jpg" alt="" class="games">
+                <img src="../assets/ps1/THPS.jpg" alt="" class="games">
+                <img src="../assets/ps1/gta.jpg" alt="" class="games">
+                <img src="../assets/ps1/FinalFantasyVII.jpg" alt="" class="games">
+                <img src="../assets/ps1/RE3.jpg" alt="" class="games">
+                <img src="../assets/ps1/crashbandicoot.jpg" alt="" class="games">
+                <img src="../assets/ps1/silethill.jpg" alt="" class="games">
+                <img src="../assets/ps1/MKtrilogy.jpg" alt="" class="games">
+                <img src="../assets/ps1/RE2.jpg" alt="" class="games">
+                <img src="../assets/ps1/spidermanps1.jpg" alt="" class="games">
+                <img src="../assets/ps1/THPS2.jpg" alt="" class="games">
+                <img src="../assets/ps1/castlevania.jpg" alt="" class="games">
+                <img src="../assets/ps1/granturismo2.jpg" alt="" class="games">
+                <img src="../assets/ps1/driver.jpg" alt="" class="games">
             </div>
         </section>
 
