--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
 
-        <section class="container">
+        <section id="container">
             <div class="list">
 
                 <div class="item active ">
